[tool.poetry]
name = "yuquedd"
version = "1.0.0"
description = "Tool for converting yuque.com knowledge base documents to markdown documents."
authors = ["gupingan <g332920287@foxmail.com>"]
readme = "README.md"
license = 'MIT'
homepage = 'https://github.com/gupingan/yuquedd'
documentation = 'https://github.com/gupingan/yuquedd'
repository = 'https://github.com/gupingan/yuquedd'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
click = "^8.1.7"
lxml = "^5.2.2"

[[tool.poetry.source]]
name = "tencent-pypi"
url = "http://mirrors.cloud.tencent.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
